hoppscotch/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hoppscotch-frontend
  namespace: gqms
  labels:
    app: hoppscotch-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hoppscotch-frontend
  template:
    metadata:
      labels:
        app: hoppscotch-frontend
    spec:
      containers:
        - name: hoppscotch-frontend
          image: hoppscotch/hoppscotch-frontend
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
        - name: hoppscotch-backend
          image: hoppscotch/hoppscotch-backend
          ports:
            - name: http
              containerPort: 3170
              protocol: TCP
        - name: my-nginx
          image: curlimages/curl
          command: ["sh", "-c", "sleep 10000000"]
