hoppscotch/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hoppscotch-frontend-svc
  namespace: gqms
  labels:
    app: hoppscotch-frontend
spec:
  ports:
    - name: hoppscotch-frontend-svc
      port: 3000
      targetPort: 3000
      protocol: TCP
      
  selector:
    app: hoppscotch-frontend

---
apiVersion: v1
kind: Service
metadata:
  name: hoppscotch-admin-svc
  namespace: gqms
  labels:
    app: hoppscotch-admin
spec:
  ports:
    - name: hoppscotch-admin-svc
      port: 3100
      targetPort: 3100
      protocol: TCP
      
  selector:
    app: hoppscotch-admin

---

apiVersion: v1
kind: Service
metadata:
  name: hoppscotch-backend-svc
  namespace: gqms
  labels:
    app: hoppscotch-backend
spec:
  ports:
    - name: hoppscotch-backend-svc
      port: 3170
      targetPort: 3170
      protocol: TCP
      
  selector:
    app: hoppscotch-backend

---

apiVersion: v1
kind: Service
metadata:
  name: hoppscotch-postgres-svc
  namespace: gqms
  labels:
    app: hoppscotch-postgres
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: http
  selector:
    app: hoppscotch-postgres
