hoppscotch/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: issue-ingress
  namespace: gqms
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - oblivion.com
      secretName: tlssecret
  rules:
  - host: hoppscotch.oblivion.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: hoppscotch-frontend-svc
            port:
              number: 3000
  - host: hoppscotch-api.oblivion.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: hoppscotch-backend-svc
            port:
              number: 3170
